# scion

./: .gitignore  BUILD.bazel  scion-intra.sh
go/co/: main.go
go/cs/: main.go
go/daemon/: main.go
go/integration/colibri_integration/: BUILD.bazel  main.go
intra-AS-simulation/: AS_config_creator.py  AutonomousSystem.py  BUILD.bazel  CLI.py  README.md  clean_up.py  default_intra_topo_generator.py  install_deps.sh  requirements.txt  routing_protocols.py  start_SCION.py  start_simulation.py  test_SCION_in_mininet.py
python/lib/: defines.py
python/topology/: common.py  config.py  generator.py  go.py  supervisor.py  topo.py
topology/: eval_tiny4.topo
topology/intra_topology/: README.md  chain30.intra.topo  circle.intra.topo  default.intra.topo  default4_intra.config  default_bw.intra.topo  default_bw_loss.intra.topo  default_bw_loss_delay.intra.topo  default_delay.intra.topo  default_delay1.intra.topo  default_delay10.intra.topo  default_delay5.intra.topo  default_delay50.intra.topo  default_loss.intra.topo  eval10.intra.topo  eval100.intra.topo  eval5.intra.topo  eval50.intra.topo  eval75.intra.topo  eval_1_100_intra.config  eval_1_10_intra.config  eval_1_50_intra.config  eval_1_75_intra.config  eval_2_bw_intra.config  eval_2_bw_loss.intra.config  eval_2_bw_loss_delay.intra.config  eval_2_delay10_intra.config  eval_2_delay1_intra.config  eval_2_delay50_intra.config  eval_2_delay5_intra.config  eval_2_delay_intra.config  eval_2_loss_intra.config  eval_3_1_intra.config  eval_3_30_intra.config  eval_3_5_intra.config  eval_3_full_intra.config  tiny4_intra.config  (+2 more)
(+25 files in other folders)
