load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/colibri_integration",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/integration:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/util:go_default_library",
    ],
)

scion_go_binary(
    name = "colibri_integration",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
